--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio | SURTEK - Proyectos Destacados</title>
     <link rel="stylesheet" href="assets/css/style.css">
-</head>
+</head><link rel="stylesheet" href="assets/css/style.css">
 <body>
 
     <header>
