--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SURTEK | Código Estratégico y UX/UI Minimalista</title>
+  <title>SURTEK | Código Estratégico y UX/UI Minimalista.</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
