--- a/contacto.html
+++ b/contacto.html
@@ -3,81 +3,189 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto | SURTEK - Código Estratégico</title>
-    <meta name="description" content="Contacta a SURTEK para iniciar tu proyecto de desarrollo web o e-commerce.">
-    <link rel="stylesheet" href="assets/css/style.css"> 
+    <title>Contacto | SURTEK - Hablemos de tu Proyecto</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+
+    <style>
+        .contact-grid {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 30px;
+            margin-top: 40px;
+        }
+
+        .contact-info .card {
+            background-color: var(--surface-color);
+            padding: 30px;
+            border-radius: 8px;
+        }
+
+        .contact-info h3 {
+            color: var(--primary-color);
+            margin-bottom: 20px;
+        }
+
+        .contact-info p {
+            margin-bottom: 10px;
+            color: var(--text-secondary);
+        }
+
+        .contact-info a {
+            color: var(--primary-color);
+            text-decoration: none;
+        }
+
+        .contact-form .card {
+            background-color: var(--surface-color);
+            padding: 30px;
+            border-radius: 8px;
+        }
+
+        .contact-form h3 {
+            color: var(--primary-color);
+            margin-bottom: 20px;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            color: var(--text-color);
+            font-weight: bold;
+        }
+
+        .form-group input[type="text"],
+        .form-group input[type="email"],
+        .form-group select,
+        .form-group textarea {
+            width: calc(100% - 20px); /* Ajuste para padding */
+            padding: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 4px;
+            background-color: var(--background-color);
+            color: var(--text-color);
+            font-size: 1em;
+        }
+
+        .form-group textarea {
+            resize: vertical; /* Permite redimensionar verticalmente */
+            min-height: 120px;
+        }
+
+        .form-group input[type="text"]:focus,
+        .form-group input[type="email"]:focus,
+        .form-group select:focus,
+        .form-group textarea:focus {
+            outline: none;
+            border-color: var(--primary-color);
+            box-shadow: 0 0 5px rgba(0, 204, 153, 0.5);
+        }
+
+        .form-group button {
+            background-color: var(--primary-color);
+            color: var(--background-color);
+            padding: 15px 30px;
+            border: none;
+            border-radius: 4px;
+            font-size: 1.1em;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s;
+        }
+
+        .form-group button:hover {
+            background-color: var(--secondary-color);
+            color: var(--text-color);
+        }
+        
+        /* Media Query para Contacto */
+        @media (min-width: 768px) {
+            .contact-grid {
+                grid-template-columns: 1fr 2fr; /* Info a la izquierda, Formulario a la derecha */
+            }
+        }
+    </style>
 </head>
 <body>
 
     <header>
-        <div class="nav-content container">
-            <a href="index.html" class="logo">SUR<span style="color: var(--primary-color);">TEK</span></a>
-            <nav id="main-nav">
+        <div class="container navbar">
+            <div class="logo">SURTEK</div>
+            <nav>
                 <a href="index.html">Inicio</a>
-                <a href="portfolio.html">Portafolio</a>
                 <a href="servicios.html">Servicios</a>
-                <a href="sobremi.html">Sobre Mí</a>
-                <a href="contacto.html" class="btn btn-primary active">Contacto</a>
+                <a href="contacto.html" class="cta-button active">Contacto</a> 
             </nav>
-            <div class="menu-toggle" id="menu-toggle">☰</div>
         </div>
     </header>
 
-    <main>
-        <section class="container" style="padding-top: 80px; padding-bottom: 80px; text-align: center;">
-            <h1 style="margin-bottom: 20px; font-size: 2.8em; color: var(--primary-color);">Comencemos tu Proyecto.</h1>
-            <p style="font-size: 1.1em; max-width: 800px; margin: 0 auto 50px; color: var(--subtle-text-color);">
-                Cuéntanos tus objetivos y te enviaremos una propuesta personalizada de SURTEK.
-            </p>
+    <section class="hero-small" style="background-color: var(--surface-color); padding: 80px 0;">
+        <div class="container" style="text-align: center;">
+            <h1 style="color: var(--primary-color);">Comencemos tu Proyecto.</h1>
+            <p style="color: var(--text-secondary);">Cuéntanos tus objetivos y te enviaremos una propuesta personalizada de SURTEK.</p>
+        </div>
+    </section>
 
-            <div class="contact-info" style="margin-bottom: 50px; text-align: left; max-width: 600px; margin-left: auto; margin-right: auto; padding: 25px; border-radius: 10px; background-color: var(--surface-color); border: 1px solid var(--border-color); box-shadow: 0 4px 15px rgba(0,0,0,0.4);">
-                <h2 style="font-size: 1.8em; margin-bottom: 20px; color: var(--primary-color);">Información de SURTEK</h2>
-                <p style="margin-bottom: 10px;"><strong style="color: var(--primary-color);">Email:</strong> <a href="mailto:contactosurtek@gmail.com" style="color: var(--text-color); text-decoration: none;">contactosurtek@gmail.com</a></p>
-                <p style="margin-bottom: 10px;"><strong style="color: var(--primary-color);">Teléfono / WhatsApp:</strong> <span style="color: var(--text-color);">+54 9 11 56 36 48 91</span></p>
-                <p><strong style="color: var(--primary-color);">Ubicación:</strong> <span style="color: var(--text-color);">Buenos Aires, Argentina (Servicio remoto global)</span></p>
+    <section class="section">
+        <div class="container">
+            <div class="contact-grid">
+                <div class="contact-info">
+                    <div class="card">
+                        <h3>Información de SURTEK</h3>
+                        <p><strong>Email:</strong> <a href="mailto:contactosurtek@gmail.com">contactosurtek@gmail.com</a></p>
+                        <p><strong>Teléfono / WhatsApp:</strong> <a href="https://wa.me/5491156364891" target="_blank">+54 9 11 5636 4891</a></p>
+                        <p><strong>Ubicación:</strong> Buenos Aires, Argentina (Servicio remoto global)</p>
+                    </div>
+
+                    <div class="card" style="margin-top: 30px;">
+                        <h3>¿Tienes Prisa?</h3>
+                        <p style="color: var(--text-secondary);">Para consultas urgentes o agendar una llamada rápida, usa nuestro botón de WhatsApp directo.</p>
+                        <a href="https://wa.me/5491156364891" target="_blank" class="cta-button" style="margin-top: 15px;">Enviar WhatsApp</a>
+                    </div>
+                </div>
+
+                <div class="contact-form">
+                    <div class="card">
+                        <h3>Envíanos un Mensaje</h3>
+                        <form action="mailto:contactosurtek@gmail.com" method="post" enctype="text/plain">
+                            <div class="form-group">
+                                <label for="nombre">Nombre Completo</label>
+                                <input type="text" id="nombre" name="Nombre" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="Email" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="tipo_proyecto">Tipo de Proyecto (Ej. E-commerce, Landing Page, App)</label>
+                                <input type="text" id="tipo_proyecto" name="Tipo de Proyecto" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="mensaje">Cuéntanos sobre tu Proyecto</label>
+                                <textarea id="mensaje" name="Mensaje" required></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit">Enviar Mensaje</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-
-            <div class="whatsapp-cta" style="margin-bottom: 50px; max-width: 600px; margin-left: auto; margin-right: auto;">
-                <h2 style="font-size: 1.8em; margin-bottom: 20px; color: var(--text-color);">¿Tienes Prisa?</h2>
-                <p style="margin-bottom: 20px; color: var(--subtle-text-color);">Para consultas urgentes o agendar una llamada rápida, usa nuestro botón de WhatsApp directo.</p>
-                <a href="https://wa.me/+5491156364891" target="_blank" class="btn btn-primary" style="background-color: #25D366; border-color: #25D366;">Enviar WhatsApp</a>
-            </div>
-
-            <div class="contact-form-container" style="max-width: 600px; margin: 0 auto; padding: 30px; border-radius: 10px; box-shadow: 0 4px 15px rgba(0,0,0,0.4); background-color: var(--surface-color); border: 1px solid var(--border-color);">
-                <h2 style="font-size: 1.8em; margin-bottom: 30px; color: var(--primary-color);">Envíanos un Mensaje</h2>
-                <form action="#" method="POST" style="text-align: left;">
-                    <div style="margin-bottom: 15px;">
-                        <label for="nombre" style="display: block; margin-bottom: 5px; font-weight: bold; color: var(--text-color);">Nombre Completo</label>
-                        <input type="text" id="nombre" name="nombre" required style="width: 100%; padding: 10px; border: 1px solid var(--border-color); border-radius: 5px; background-color: var(--background-color); color: var(--text-color);">
-                    </div>
-                    <div style="margin-bottom: 15px;">
-                        <label for="email" style="display: block; margin-bottom: 5px; font-weight: bold; color: var(--text-color);">Email</label>
-                        <input type="email" id="email" name="email" required style="width: 100%; padding: 10px; border: 1px solid var(--border-color); border-radius: 5px; background-color: var(--background-color); color: var(--text-color);">
-                    </div>
-                    <div style="margin-bottom: 15px;">
-                        <label for="tipo_proyecto" style="display: block; margin-bottom: 5px; font-weight: bold; color: var(--text-color);">Tipo de Proyecto (Ej. E-commerce, Landing Page, App)</label>
-                        <input type="text" id="tipo_proyecto" name="tipo_proyecto" style="width: 100%; padding: 10px; border: 1px solid var(--border-color); border-radius: 5px; background-color: var(--background-color); color: var(--text-color);">
-                    </div>
-                    <div style="margin-bottom: 20px;">
-                        <label for="mensaje" style="display: block; margin-bottom: 5px; font-weight: bold; color: var(--text-color);">Cuéntanos sobre tu Proyecto</label>
-                        <textarea id="mensaje" name="mensaje" rows="6" required style="width: 100%; padding: 10px; border: 1px solid var(--border-color); border-radius: 5px; resize: vertical; background-color: var(--background-color); color: var(--text-color);"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary" style="width: 100%;">Enviar Mensaje</button>
-                </form>
-            </div>
-        </section>
-    </main>
-
+        </div>
+    </section>
+    
     <footer>
-        <div class="footer-content container">
-            <p>&copy; 2025 SURTEK. Desarrollado por Canaan Darpino. Todos los derechos reservados.</p>
-            <div class="footer-links">
-                <a href="https://www.linkedin.com/in/canaan-darpino-3baa87210/" target="_blank">LinkedIn</a>
-                <a href="#">GitHub</a>
+        <div class="container">
+            <p>© 2025 SURTEK. Desarrollado por Canaan Darpino.</p>
+            <div class="social-links">
+                <a href="#" target="_blank" style="color: var(--text-secondary);">LinkedIn</a> |
+                <a href="https://github.com/canaandarpino-star" target="_blank" style="color: var(--text-secondary);">GitHub</a>
             </div>
         </div>
     </footer>
 
-    <script src="assets/js/script.js" defer></script>
 </body>
 </html>
