--- a/servicios.html
+++ b/servicios.html
@@ -19,8 +19,7 @@
         </div>
     </header>
 
-    <section class="hero-small" style="background-color: var(--surface-color); padding: 80px 0;">
-        <div class="container" style="text-align: center;">
+    <section class="hero-small glass-hero" style="padding: 80px 0;"> <div class="container" style="text-align: center;">
             <h1 style="color: var(--primary-color);">Nuestras Soluciones de Desarrollo</h1>
             <p style="color: var(--text-secondary);">Transformamos tus objetivos de negocio en código de alto impacto y UX/UI estratégica.</p>
         </div>
@@ -29,8 +28,7 @@
     <section class="section">
         <div class="container">
             <div class="grid-2-cols">
-                <div class="card">
-                    <h3 style="color: var(--primary-color);">Paquete E-commerce Pro</h3>
+                <div class="glass-card"> <h3 style="color: var(--primary-color);">Paquete E-commerce Pro</h3>
                     <ul>
                         <li>Diseño y desarrollo Full-Stack de tiendas online orientadas a volumen de venta.</li>
                         <li>Integración de Pasarelas de Pago (Mercado Pago, Stripe, etc.).</li>
@@ -40,8 +38,7 @@
                     <a href="contacto.html" class="cta-button" style="margin-top: 20px;">Solicitar Presupuesto</a>
                 </div>
                 
-                <div class="card">
-                    <h3 style="color: var(--primary-color);">Desarrollo de Apps y Sistemas a Medida</h3>
+                <div class="glass-card"> <h3 style="color: var(--primary-color);">Desarrollo de Apps y Sistemas a Medida</h3>
                     <ul>
                         <li>Desarrollo de aplicaciones web complejas (SaaS, CRMs, Dashboards) para automatizar procesos internos.</li>
                         <li>Arquitectura Full-Stack robusta con tecnologías modernas (React/Node.js).</li>
@@ -52,8 +49,7 @@
                 </div>
             </div>
 
-            <div class="card" style="margin-top: 30px;">
-                <h3 style="color: var(--primary-color);">Web Corporativa de Alto Rendimiento</h3>
+            <div class="glass-card" style="margin-top: 30px;"> <h3 style="color: var(--primary-color);">Web Corporativa de Alto Rendimiento</h3>
                 <ul>
                     <li>Webs profesionales, Landing Pages y Portafolios optimizados para la velocidad y la imagen corporativa.</li>
                     <li>Máxima puntuación en Google PageSpeed y auditorías de rendimiento.</li>
