--- a/servicios.html
+++ b/servicios.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicios | SURTEK - Soluciones Digitales</title>
+    <title>Servicios | SURTEK - Soluciones Digitales Glassmorphism</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -14,12 +14,14 @@
             <nav>
                 <a href="index.html">Inicio</a>
                 <a href="servicios.html" class="active">Servicios</a>
+                <a href="portfolio.html">Portafolio</a> 
                 <a href="contacto.html" class="cta-button">Contacto</a> 
             </nav>
         </div>
     </header>
 
-    <section class="hero-small glass-hero" style="padding: 80px 0;"> <div class="container" style="text-align: center;">
+    <section class="hero-small glass-hero" style="padding: 80px 0;">
+        <div class="container" style="text-align: center;">
             <h1 style="color: var(--primary-color);">Nuestras Soluciones de Desarrollo</h1>
             <p style="color: var(--text-secondary);">Transformamos tus objetivos de negocio en código de alto impacto y UX/UI estratégica.</p>
         </div>
@@ -27,31 +29,33 @@
 
     <section class="section">
         <div class="container">
-            <div class="grid-2-cols">
-                <div class="glass-card"> <h3 style="color: var(--primary-color);">Paquete E-commerce Pro</h3>
-                    <ul>
-                        <li>Diseño y desarrollo Full-Stack de tiendas online orientadas a volumen de venta.</li>
-                        <li>Integración de Pasarelas de Pago (Mercado Pago, Stripe, etc.).</li>
-                        <li>Configuración de Inventario, Gestión de Pedidos y Envíos.</li>
-                        <li>Diseño UX/UI de Checkout optimizado para máxima conversión.</li>
-                    </ul>
-                    <a href="contacto.html" class="cta-button" style="margin-top: 20px;">Solicitar Presupuesto</a>
-                </div>
-                
-                <div class="glass-card"> <h3 style="color: var(--primary-color);">Desarrollo de Apps y Sistemas a Medida</h3>
-                    <ul>
-                        <li>Desarrollo de aplicaciones web complejas (SaaS, CRMs, Dashboards) para automatizar procesos internos.</li>
-                        <li>Arquitectura Full-Stack robusta con tecnologías modernas (React/Node.js).</li>
-                        <li>Integración con APIs externas y bases de datos personalizadas.</li>
-                        <li>Escalabilidad garantizada para el crecimiento futuro de tu negocio.</li>
-                    </ul>
-                    <a href="contacto.html" class="cta-button" style="margin-top: 20px;">Consultar Requerimientos</a>
-                </div>
+            <div class="glass-card" style="margin-bottom: 30px;">
+                <h3 style="color: var(--primary-color);">Paquete E-commerce Pro</h3>
+                <p>Tiendas online optimizadas para convertir visitas en ventas y escalar tu negocio.</p>
+                <ul>
+                    <li>Diseño y desarrollo Full-Stack de tiendas online orientadas a volumen de venta.</li>
+                    <li>Integración de Pasarelas de Pago (Mercado Pago, Stripe, etc.).</li>
+                    <li>Configuración de Inventario, Gestión de Pedidos y Envíos.</li>
+                    <li>Diseño UX/UI de Checkout optimizado para máxima conversión.</li>
+                </ul>
+                <a href="contacto.html" class="cta-button" style="margin-top: 20px;">Solicitar Presupuesto</a>
+            </div>
+            
+            <div class="glass-card" style="margin-bottom: 30px;">
+                <h3 style="color: var(--primary-color);">Desarrollo de Apps y Sistemas a Medida</h3>
+                <p>Aplicaciones web complejas (SaaS, CRMs, Dashboards) para automatizar procesos internos.</p>
+                <ul>
+                    <li>Arquitectura Full-Stack robusta con tecnologías modernas (React/Node.js).</li>
+                    <li>Integración con APIs externas y bases de datos personalizadas.</li>
+                    <li>Escalabilidad garantizada para el crecimiento futuro de tu negocio.</li>
+                </ul>
+                <a href="contacto.html" class="cta-button" style="margin-top: 20px;">Consultar Requerimientos</a>
             </div>
 
-            <div class="glass-card" style="margin-top: 30px;"> <h3 style="color: var(--primary-color);">Web Corporativa de Alto Rendimiento</h3>
+            <div class="glass-card" style="margin-bottom: 30px;">
+                <h3 style="color: var(--primary-color);">Web Corporativa de Alto Rendimiento</h3>
+                <p>Webs profesionales, Landing Pages y Portafolios optimizados para la velocidad y la imagen corporativa.</p>
                 <ul>
-                    <li>Webs profesionales, Landing Pages y Portafolios optimizados para la velocidad y la imagen corporativa.</li>
                     <li>Máxima puntuación en Google PageSpeed y auditorías de rendimiento.</li>
                     <li>Diseño Responsive avanzado para una experiencia perfecta en todos los dispositivos.</li>
                     <li>Estructura SEO técnica para una mejor visibilidad en buscadores.</li>
